--- a/TutorDot_iOS_1/Podfile
+++ b/TutorDot_iOS_1/Podfile
@@ -7,4 +7,8 @@ target 'TutorDot_iOS' do
 
   # Pods for TutorDot_iOS
 pod 'DropDown', '~> 2.3.13'
+pod 'Alamofire', '~> 4.8.2'
+pod 'Kingfisher', '~> 5.0'
+pod 'BEMCheckBox'
+
 end
