Update CalendarVC - 캘린더뷰 달력 완성, 서버통신 성공

--- a/TutorDot_iOS_1/TutorDot_iOS/Source/Info.plist
+++ b/TutorDot_iOS_1/TutorDot_iOS/Source/Info.plist
@@ -47,7 +47,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>MainTab</string>
+					<string>Splash</string>
 				</dict>
 			</array>
 		</dict>
@@ -55,7 +55,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>MainTab</string>
+	<string>Splash</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
